# concise-concepts

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.cfg  test.py
.github/workflows/: python-package.yml  python-publish.yml
concise_concepts/: __init__.py  test.py
concise_concepts/conceptualizer/: Conceptualizer.py  __init__.py
concise_concepts/examples/: data.py  example_gensim_custom.py  example_gensim_custom_model.py  example_gensim_custom_path.py  example_gensim_default.py  example_spacy.py
tests/: test_model_import.py
