[tool.poetry]
name = "concise-concepts"
version = "0.5.2"
description = "This repository contains an easy and intuitive approach to few-shot NER using most similar expansion over spaCy embeddings. Now with entity confidence scores!"
authors = ["David Berenstein <david.m.berenstein@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pandora-intelligence/concise-concepts"
repository = "https://github.com/pandora-intelligence/concise-concepts"
documentation = "https://github.com/pandora-intelligence/concise-concepts"
keywords = ["spacy", "NER", "few-shot classification", "nlu"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = "^3.7"
spacy = "^3"
gensim = "^4"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
black = "^22.3.0"
flake8-bugbear = "^22.3.23"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
pep8-naming = "^0.12.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.black]
line-length = 119
experimental-string-processing = true

[tool.isort]
profile = "black"
src_paths = ["concise_concepts"]
